--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # db conn configs
-spring.datasource.url=jdbc:mysql://localhost:3308/packagetracking?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/packagetracking?createDatabaseIfNotExist=true&serverTimezone=Europe/Bucharest
 spring.datasource.username=root
 spring.datasource.password=10203040
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,4 +7,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #responsible for creating and updating the schema
 spring.jpa.hibernate.ddl-auto=update
-server.port=3306
+server.port=2000
